@startuml toml-merge-decor
' GENERATED by tools/model_gen.rb from doc/model/model.yml. Do not edit.
skinparam classAttributeIconSize 0
hide empty members
title toml-merge: Comment block model

package decor {
  ' The comment prefix owned by the tool, "#:" by default.
  class Marker {
    + value : String = "#:"
    --
    + classify(line : String) : PrefixLine
  }
  ' The raw decor text between the previous item and this key.
  class Prefix {
    + raw : String
    --
    + split(marker : Marker) : PrefixLine [*]
  }
  abstract class PrefixLine <<rust enum>> {
    + text : String
  }
  ' Owned by the tool. Rewritten on every merge.
  class MarkerLine {
  }
  ' Owned by the person. Never rewritten, reflowed or reordered.
  class UserLine {
  }
  ' Empty or whitespace only.
  class BlankLine {
  }
  ' One key's rebuilt prefix. Rendered in order, leading blanks, then the documentation lines from the defaults, then the echo, then the user's own lines.
  class DocBlock {
    + render() : String
    + {static} from_default(default_prefix : Prefix, user_prefix : Prefix) : DocBlock
  }
  ' The marker line recording the shipped default, written only when the user's value differs from it.
  class DefaultEcho {
    + key : String
    + value : String
    --
    + render(marker : Marker) : MarkerLine
  }
}

package toml_edit <<external>> {
  class Decor
}

Prefix *-- "*" PrefixLine : lines
MarkerLine --|> PrefixLine
UserLine --|> PrefixLine
BlankLine --|> PrefixLine
DocBlock *-- "*" BlankLine : leading_blanks
DocBlock *-- "*" MarkerLine : doc_lines
DocBlock *-- "0..1" DefaultEcho : echo
DocBlock *-- "*" UserLine : user_lines
Prefix ..> Marker : classifies with
DocBlock ..> Decor : written to
@enduml
